# clipforge

./: .gitignore  CMakeLists.txt  README.md  install.sh  uninstall.sh
src/: cli.cpp  cli.h  config.cpp  config.h  daemon.cpp  daemon.h  ipc.cpp  ipc.h  logger.cpp  logger.h  main.cpp  storage.cpp  storage.h  tui.cpp  tui.h  utils.cpp  utils.h
systemd/: clipforge.service
